--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <span class="link-block">
-                <a href="#"
+                <a href="https://anonymous.4open.science/r/dice-rl-pre-release-6D81/README.md"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
