--- a/index.html
+++ b/index.html
@@ -137,6 +137,12 @@
       <img alt="real robot results" src="media/RL-realword.svg" style="width: 100%; max-width: 100%;">
     </div>
 
+    <div class="content has-text-centered" style="margin: 20px 0;">
+      <p>
+        DICE-RL improves the pretrained policy from <strong>56.67%</strong> to <strong>93.33%</strong> success rate over 30 runs. See our <strong>uncut</strong> evaluation video (10x).
+      </p>
+    </div>
+
     <div style="display: flex; flex-wrap: wrap; justify-content: space-between; gap: 2%;">
       <div style="width: 48%; text-align: center;">
         <video controls autoplay loop muted style="width: 100%;">
