--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <p>
         We compare DICE-RL against prior methods, focusing on approaches that build on pretrained diffusion-based policies. 
         We benchmark on Can, Square, Transport,Tool Hang tasks from the Robomimic benchmark, and report results for both state-based and pixel-based observations. 
-        For Can, the BC policies are trained on 20 demonstrations; while other tasks using 50 demonstrations from Proficient-Human (PH) dataset.
+        For Can, the BC policies are trained on <strong>20</strong> demonstrations; while other tasks using <strong>50</strong> demonstrations from Proficient-Human (PH) dataset.
       </p>
     </div>
 
